--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -7,11 +7,11 @@ body{
   margin-top: 150px;
   font-family: 'Numans', sans-serif;
   }
-  .ng-invalid :not(form){
+  .ng-invalid input{
     border-left:5px solid red ;
     }
 
-    .ng-valid :not(form){
+    .ng-valid input{
       border-left:5px solid green;
       }
   .card{
