--- a/src/app/Menu/home-page/home-page.component.html
+++ b/src/app/Menu/home-page/home-page.component.html
@@ -9,7 +9,7 @@
 <button class="btn"><span class="fa fa-capsules"style="color:#01094E;font-size:60px; "></span><br><h6 style="font-style: oblique; color:#01094E">Formulary</h6></button>
 
 <button class="btn "><span class="fa fa-comment-medical" style="color:#01094E;font-size:60px; "></span><br><h6 style="font-style:oblique;color:#01094E ">Patient<br>Feedback<br>History</h6></button>
-<button class="btn " routerLink="/addPetOwner"><span class="fa fa-users" style="color:#01094E;font-size:60px; "></span><br><h6 style="font-style:oblique;color:#01094E">Manage<br>Users</h6></button>
+<button class="btn " routerLink="/PetOwners"><span class="fa fa-users" style="color:#01094E;font-size:60px; "></span><br><h6 style="font-style:oblique;color:#01094E">Manage<br>Users</h6></button>
 <span class = "glyphicon glyphicon-ok form-control-feedback"></span>
 </div>
 <div class="container">
