--- a/src/app/Vet/new-rx/new-rx.component.html
+++ b/src/app/Vet/new-rx/new-rx.component.html
@@ -58,7 +58,7 @@ placeholder="Select Pet"
 
   <button type="button" id="first" class="btn"[disabled]="!formvalide" > <span class="fa fa-plus"style="font-size:20px ;color:white;float:left ; margin-top:5px"></span> &nbsp;Add </button>
 
-  <button type="button" id="deuxieme"class="btn"  [disabled]="!formvalide"> <span class="fa fa-list-ul"style="font-size:20px ;color:black ; float:left ; margin-top:5px"></span> &nbsp; Treatment Plans </button>
+  <button type="button" id="deuxieme"class="btn"  [disabled]="!formvalide"> <span class="fa fa-list-ul"style="font-size:20px ;color:black ; float:right ; margin-top:5px"></span> &nbsp; Treatment Plans </button>
 
 </div>
 
