--- a/src/app/SuperViseur/vets/vets.component.html
+++ b/src/app/SuperViseur/vets/vets.component.html
@@ -1,7 +1,7 @@
 
 <span class="fa fa-arrow-left" style="color: #01094E;"></span><a routerLink="/HomePage"> Dashbord</a>
-<h2 style="color:#01094E"> PetOwners List </h2>
-<button routerLink="/addPetOwner"type="button" class="btn btn-secondary" id="add2">  <span class="fa fa-plus" style="margin-right: 15px;"></span>Add New PetOwner</button>
+<h2 style="color:#01094E">Vets List </h2>
+<button routerLink="/addVet"type="button" class="btn btn-secondary" id="add2">  <span class="fa fa-plus" style="margin-right: 15px;"></span>Add New Vet</button>
 <div class="input-group">
   <input type="text" id='search' class="form-control" [(ngModel)]='search' placeholder="Search by Name">
   <div class="input-group-append">
@@ -25,7 +25,7 @@
   </thead>
   <tbody>
 
-      <tr *ngFor="let users of user| filter:search">
+      <tr *ngFor="let users of user| filter:search" >
        <td>{{users.name }}  </td>
         <td>{{users.last_name}}</td>
         <td>{{users.email}}</td>
@@ -40,3 +40,4 @@
     </tr>
 </tbody>
 </table>
+
