--- a/src/app/SuperViseur/pet-owners/profil-pet-owner/profil-pet-owner.component.html
+++ b/src/app/SuperViseur/pet-owners/profil-pet-owner/profil-pet-owner.component.html
@@ -50,7 +50,7 @@
       </div>
       <div class="form-row">
          <label for="inputEmail" >Email Address <i style="color:red">*</i></label>
-          <input type="text" name="email"  [(ngModel)]='user.email' class="form-control" id="inputEmail" value="{{user.email}}" disabled="disabled">
+          <input type="text" name="email"  [(ngModel)]='user.email' class="form-control" id="inputEmail" value="{{user.email}}" >
       </div>
      <div class="row">
      <div class="col">
