--- a/src/app/SuperViseur/add-pet-owner/add-pet-owner.component.css
+++ b/src/app/SuperViseur/add-pet-owner/add-pet-owner.component.css
@@ -62,3 +62,11 @@ input[checkbox]
 {
 width: 10px;
 }
+.modal-dialog{
+  overflow-y: initial !important
+}
+.modal-body{
+  height: 400px;
+  width: 500px;
+  overflow-y: auto;
+}
