--- a/src/app/SuperViseur/add-pet-owner/add-pet-owner.component.html
+++ b/src/app/SuperViseur/add-pet-owner/add-pet-owner.component.html
@@ -7,28 +7,28 @@
 <form>
 
    <div class="form-row">
-      <label for="inputAddress">First Name <i style="color:red">*</i></label>
-      <input type="text"   name="name"class="form-control" id="inputAddress" placeholder=""[(ngModel)]='form.name'>
+      <label for="inputName">First Name <i style="color:red">*</i></label>
+      <input type="text"   name="name"class="form-control" id="inputName" placeholder=""[(ngModel)]='form.name'>
      <!-- <span class="error text-danger"[hidden]="!err.name">{{err.name}}</span>-->
     </div>
     <div class="form-row">
-      <label for="inputAddress">Last Name<i style="color:red">*</i></label>
-      <input type="text"  name="last_name" class="form-control" id="inputAddress" placeholder="" [(ngModel)]='form.last_name'>
+      <label for="inputLastName">Last Name<i style="color:red">*</i></label>
+      <input type="text"  name="last_name" class="form-control" id="inputLastName" placeholder="" [(ngModel)]='form.last_name'>
     <!-- <span class="error text-danger"[hidden]="!err.last_name">{{err.last_name}}</span>-->
     </div>
     <div class="form-row">
       <label for="inputAddress">Email Address<i style="color:red">*</i></label>
-      <input type="text" name="email" class="form-control" id="inputAddress" placeholder=""[(ngModel)]="form.email">
-    <span class="error text-danger"[hidden]="!err.email">{{err.email}}</span>
+      <input type="text" name="email" class="form-control" id="inputAddress" placeholder="exemple@...."[(ngModel)]="form.email">
+    <!--<span class="error text-danger"[hidden]="!err.email">{{err.email}}</span>-->
     </div>
     <div class="row">
     <div class="col">
         <label for="validationDefault03">Phone <i style="color:red">*</i></label>
-        <input type="text" name="phone"class="form-control" placeholder=""[(ngModel)]="form.phone">
+        <input type="text"  id="validationDefault03"name="phone"class="form-control" placeholder=""[(ngModel)]="form.phone">
        <!-- <span class="error text-danger"[hidden]="!err.phone">{{err.phone}}</span>-->
     </div>
     <div class="col">
-        <label for="inputAddress" id="sexe">Sexe<i style="color:red">*</i></label>
+        <label for="inputsexe" id="sexe">Sexe<i style="color:red">*</i></label>
         <div class="sexe">
           <div class="form-check">
              <label class="form-check-label">
@@ -46,8 +46,8 @@
       </div>
       <div class="row">
       <div class="col">
-      <label for="inputAddress">Date of Birth<i style="color:red">*</i></label>
-      <input class="form-control" placeholder="MM-DD-YYYY" type="date" [(ngModel)]="form. date_of_birth"  name="date_of_birth">
+      <label for="inputDate">Date of Birth<i style="color:red">*</i></label>
+      <input class="form-control" placeholder="MM-DD-YYYY" id="inputDate"type="date" [(ngModel)]="form. date_of_birth"  name="date_of_birth">
        <small>DD-MM-YYYY</small>
         <br>
             <!--<span class="error text-danger"[hidden]="!err.date_of_birth">{{err.date_of_birth}}</span>-->
@@ -64,8 +64,8 @@
     </div>
           <h3 style="color:#01094E">Shipping Address</h3>
     <div class="form-group">
-    <label for="inputAddress">Address</label>
-    <input type="text" name="adresse" class="form-control" id="inputAddress" placeholder=""[(ngModel)]="form.adresse">
+    <label for="inputAddressHome">Address</label>
+    <input type="text" name="adresse" class="form-control" id="inputAddressHome" placeholder=""[(ngModel)]="form.adresse">
             <!--<span class="error text-danger"[hidden]="!err.adresse">{{err.adresse}}</span>-->
     </div>
 
@@ -90,7 +90,7 @@
     </div>
     </div>
     <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary" data-toggle="modal"  data-target="#exampleModalCenter" (click)='Vets()' style="width: 400px;">
+  <button type="button" class="btn btn-primary" data-toggle="modal"  data-target="#exampleModalCenter" (click)='Vetss()' style="width: 400px;">
       <h6 style="float:left;">Attach a Vet </h6>
   </button>
 
@@ -106,9 +106,9 @@
       </div>
     <div class="modal-body">
 
-        <input type="text" class="form-control" style="display: inline; width:300px;margin-right: 25px;" placeholder="Search by Name">
+        <input type="text" class="form-control" style="display: inline; width:300px;margin-right: 15px;" placeholder="Search by Name">
         <button type="button" class="btn btn-primary" style="display: inline; background-color: green;">Find </button>
-        <button style="display: inline; background-color:darkred;margin-left: 15px;"type="button" class="btn btn-secondary" data-dismiss="modal" >Close</button>
+        <button style="display: inline; background-color:darkred;margin-left: 10px;"type="button" class="btn btn-secondary" data-dismiss="modal" >Close</button>
         <table class="table table-striped">
           <thead>
             <tr>
@@ -119,13 +119,13 @@
             </tr>
           </thead>
           <tbody >
-             <tr *ngFor="let vet of vets">
+             <tr *ngFor="let vets of vets">
               <th scope="row"></th>
-              <td>{{vet.name }} {{vet.last_name}} &nbsp;({{vet.email}}) </td>
+              <td>{{vets.name }} {{vets.last_name}} &nbsp;({{vets.email}}) </td>
               <td style="float: right;">
                 <!-- Default unchecked -->
                 <div class="custom-control custom-checkbox">
-                    <input type="checkbox" (change)="onChange(vet.id ,$event.target.checked)"class="form-check-input" >
+                    <input type="checkbox" (change)="onChange(vets.id ,$event.target.checked)"class="form-check-input" >
                    <!-- <label class="custom-control-label" ></label>-->
                 </div>
               </td>
