--- a/src/app/SuperViseur/vets/add-new-vet/add-new-vet.component.html
+++ b/src/app/SuperViseur/vets/add-new-vet/add-new-vet.component.html
@@ -7,12 +7,12 @@
     <div class="col">
       <label for="inputFirstName">First Name <i style="color:red">*</i></label>
       <input type="text"   name="name"class="form-control" id="inputFirstName" placeholder=""[(ngModel)]='form.name'>
-     <!-- <span class="error text-danger"[hidden]="!err.name">{{err.name}}</span>-->
+    <!--<span class="error text-danger"[hidden]="!err.name"> </span>-->
     </div>
     <div class="col">
       <label for="inputLastName">Last Name<i style="color:red">*</i></label>
       <input type="text"  name="last_name" class="form-control" id="inputLastName" placeholder="" [(ngModel)]='form.last_name'>
-    <!-- <span class="error text-danger"[hidden]="!err.last_name">{{err.last_name}}</span>-->
+   <!-- <span class="error text-danger"[hidden]="!err.last_name">last Name is required</span>-->
     </div>
   </div>
   <div class="row">
@@ -36,36 +36,36 @@
              </label>
         </div>
         </div>
-      <!-- <span class="error text-danger" [hidden]="!err.gender">{{err.gender}}</span>-->
+      <!--<span class="error text-danger" [hidden]="!err.gender"></span>-->
     </div>
   </div>
     <div class="form-row">
       <label for="inputAddress">Email Address<i style="color:red">*</i></label>
       <input type="text" name="email" class="form-control" id="inputAddress" placeholder="exemple@gmail.com"[(ngModel)]="form.email">
-    <!--<span class="error text-danger"[hidden]="!err.email"></span>-->
+  <!--  <span class="error text-danger"[hidden]="!err.email"></span>-->
     </div>
       <div class="row">
         <div class="col">
           <label for="inputDirectNumber">Direct Line <i style="color:red">*</i></label>
-          <input type="text"  id="inputDirectNumber"name="phone"class="form-control" placeholder="7236....."[(ngModel)]="form.phone">
-         <!-- <span class="error text-danger"[hidden]="!err.phone">{{err.phone}}</span>-->
+          <input type="text"  id="inputDirectNumber"name="phone"class="form-control" placeholder="7236....."[(ngModel)]="form.directLine">
+         <!--<span class="error text-danger"[hidden]="!err.directLine"></span>-->
      </div>
      <div class="col">
       <label for="inputeMobile">Mobile Number <i style="color:red">*</i></label>
       <input type="text" id="inputeMobile" name="phone"class="form-control" placeholder="00....."[(ngModel)]="form.phone">
-     <!-- <span class="error text-danger"[hidden]="!err.phone">{{err.phone}}</span>-->
+    <!-- <span class="error text-danger"[hidden]="!err.phone"></span>-->
       </div>
       <div class="col">
       <label for="inputFax">Fax</label>
-      <input type="text" id="inputFax" name="phone"class="form-control" placeholder=""[(ngModel)]="form.phone">
-        <!-- <span class="error text-danger"[hidden]="!err.phone">{{err.phone}}</span>-->
+      <input type="text" id="inputFax" name="phone"class="form-control" placeholder=""[(ngModel)]="form.fax">
+
      </div>
       </div>
       <div class="row">
         <div class="col">
             <label for="inputSpecialty">Specialty <i style="color:red">*</i></label>
-            <input type="text"  id="inputSpecialty"name="phone"class="form-control" placeholder=""[(ngModel)]="form.phone">
-           <!-- <span class="error text-danger"[hidden]="!err.phone">{{err.phone}}</span>-->
+            <input type="text"  id="inputSpecialty"name="phone"class="form-control" placeholder=""[(ngModel)]="form.speciality">
+          <!-- <span class="error text-danger"[hidden]="!err.phone"></span>-->
        </div>
       <div class="col">
         <div class="form-group">
@@ -79,16 +79,17 @@
     </div>
 
     <div class="form-group">
-    <label for="inputAddress">Address</label>
-    <input type="text" name="adresse" class="form-control" id="inputAddress" placeholder=""[(ngModel)]="form.adresse">
-            <!--<span class="error text-danger"[hidden]="!err.adresse">{{err.adresse}}</span>-->
+    <label for="inputadress">Address</label>
+    <input type="text" name="adresse" class="form-control" id="inputadress" placeholder=""[(ngModel)]="form.adresse">
+           <!-- <span class="error text-danger"[hidden]="!err.adresse">
+            </span>-->
     </div>
 
     <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputCity">City</label>
       <input type="text" class="form-control" id="inputCity"  name="city" [(ngModel)]="form.city">
-        <!--   <span class="error text-danger"[hidden]="!err.city">{{err.city}}</span>-->
+        <!-- <span class="error text-danger"[hidden]="!err.city"></span>-->
     </div>
     <div class="form-group col-md-4">
        <label for="inputState">State</label>
@@ -96,16 +97,16 @@
         <option value="hi"selected>Choose...</option>
         <option >...</option>
         </select>
-       <!--  <span class="error text-danger" [hidden]="!err.street">{{err.street}}</span>-->
+        <!--<span class="error text-danger" [hidden]="!err.street"></span>-->
     </div>
     <div class="form-group col-md-2">
       <label for="inputZip">Zip</label>
       <input type="text" class="form-control" name="postal_code" id="inputZip"[(ngModel)]="form.postal_code">
-        <!--   <span class="error text-danger"[hidden]="!err.postal_code">{{err.postal_code}}</span>-->
+        <!-- <span class="error text-danger"[hidden]="!err.postal_code"></span>-->
     </div>
     </div>
     <label class="container">Is Supervisor
-      <input type="checkbox">
+      <input type="checkbox"  (change)="onChange($event.target.checked)">
       <span class="checkmark"></span>
     </label>
 <br>
