--- a/src/app/SuperViseur/vets/vets.component.html
+++ b/src/app/SuperViseur/vets/vets.component.html
@@ -25,8 +25,8 @@
   </thead>
   <tbody>
 
-      <tr *ngFor="let users of user| filter:search" >
-       <td>{{users.name }}  </td>
+      <tr *ngFor="let users of user| filter:search|orderBy: order|paginate: config" >
+       <td>{{users.name |titlecase }}  </td>
         <td>{{users.last_name}}</td>
         <td>{{users.email}}</td>
         <td>{{users.phone}}</td>
@@ -40,4 +40,5 @@
     </tr>
 </tbody>
 </table>
+<pagination-controls style="text-align: center;" (pageChange)="pageChanged($event)"></pagination-controls>
 
