--- a/src/app/components/password/response/response.component.html
+++ b/src/app/components/password/response/response.component.html
@@ -5,9 +5,9 @@
     <div class="card-header"><h3> Reset Password </h3></div>
     <div class="card-body" >
       <form #ResetPassswordForm=ngForm (ngSubmit)="onSubmit()" >
-       <span class="text-danger" [hidden]="!error.email">
+   <!--   <span class="text-danger" [hidden]="!error.email">
           {{error.email}}
-        </span>
+        </span>-->
 
         <div class="form-group row">
           <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
@@ -24,18 +24,18 @@
           <div class="col-sm-10">
             <input type="password"  name="password"class="form-control" id="inputPassword3" placeholder="password" [(ngModel)]="form.password" required>
           </div>
-          <span class="text-danger"[hidden]="!error.password">
+        <!--  <span class="text-danger"[hidden]="!error.password">
             {{error.password[0]}}
-          </span>
+          </span>-->
         </div>
         <div class="form-group row">
           <label for="inputPassword34" class="col-sm-2 col-form-label"> Confirm Password</label>
           <div class="col-sm-10">
             <input type="password"  name="password_confirmation"class="form-control" id="inputPassword34" placeholder="password" [(ngModel)]="form.password_confirmation" required>
           </div>
-          <span class="text-danger" [hidden]="!error.password">
+         <!-- <span class="text-danger" [hidden]="!error.password">
             {{error.password[1]}}
-          </span>
+          </span>-->
         </div>
 
      <!---->
