--- a/src/app/SuperViseur/pet-owners/profil-pet-owner/profil-pet-owner.component.css
+++ b/src/app/SuperViseur/pet-owners/profil-pet-owner/profil-pet-owner.component.css
@@ -34,15 +34,19 @@ margin-bottom: 25px;
 #edit
 {
   background-color: aliceblue;
-  color: #01094E;
-  border-color: #01094E;
+  color: #123C69;
+  border-color: #123C69;
 float: right;
 margin-bottom: 10px;
 
 }
 a{
   font-size: 13px;
-  color:#01094E;
+  color:#123C69;
 
     text-decoration:underline;
+}
+a:hover{
+  padding-left: 0.5px;
+  left: 0;
 }
