--- a/src/app/SuperViseur/vets/add-new-vet/add-new-vet.component.html
+++ b/src/app/SuperViseur/vets/add-new-vet/add-new-vet.component.html
@@ -1,7 +1,7 @@
-<span class="fa fa-arrow-left" style="color: #01094E;"></span><a routerLink="/HomePage"> Dashbord</a>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/HomePage"> Dashbord</a>
 <br>
-<span class="fa fa-arrow-left" style="color: #01094E;"></span><a routerLink="/Vets" >Vets List </a>
-<h2 style="color:#01094E"> Add New Vet</h2>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/Vets" >Vets List </a>
+<h2 style="color:#123C69"> Add New Vet</h2>
 <form>
   <div class="row">
     <div class="col">
@@ -23,7 +23,7 @@
         <br>
     </div>
     <div class="col">
-      <label for="inputSexe" id="sexe">Sexe<i style="color:red">*</i></label>
+      <label for="inputSexe" id="sexe">Gender<i style="color:red">*</i></label>
       <div class="sexe">
         <div class="form-check">
            <label class="form-check-label">
