--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -7,13 +7,13 @@
     background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
 }
 .darken-grey-text {
-    color: #01094E;
+    color: #e3eeff;
 }
 
 .navbar .dropdown-menu a:hover {
-    color: #01094E !important;
+    color: #3778C2 !important;
 }
 .darken-grey-text {
-    color: #01094E;
+    color: #3778C2;
 }
 
