--- a/src/app/components/password/response/response.component.html
+++ b/src/app/components/password/response/response.component.html
@@ -40,7 +40,7 @@
 
      <!---->
      <div class="col-sm-20">
-      <button type="submit" class="btn btn-primary" style="background-color:#080045; float:right;" [disabled]="!ResetPassswordForm.valid">Change Password
+      <button type="submit" class="btn btn-primary" style="background-color:#4056A1; float:right;" [disabled]="!ResetPassswordForm.valid">Change Password
       </button>
     </div>
       </form>
