--- a/src/app/SuperViseur/add-pet-owner/add-pet-owner.component.html
+++ b/src/app/SuperViseur/add-pet-owner/add-pet-owner.component.html
@@ -1,9 +1,9 @@
 
 
-<span class="fa fa-arrow-left" style="color: #01094E;"></span><a routerLink="/HomePage"> Dashbord</a>
+<span class="fa fa-arrow-left" style="color: #123C69"></span><a routerLink="/HomePage"> Dashbord</a>
 <br>
-<span class="fa fa-arrow-left" style="color: #01094E;"></span><a routerLink="/PetOwners" >PetOwner List </a>
-<h2 style="color:#01094E"> Add New Pet Owner</h2>
+<span class="fa fa-arrow-left" style="color: #123C69;"></span><a routerLink="/PetOwners" >PetOwner List </a>
+<h2 style="color:#123C69"> Add New Pet Owner</h2>
 <form>
 
    <div class="form-row">
@@ -62,7 +62,7 @@
      </div>
     </div>
     </div>
-          <h3 style="color:#01094E">Shipping Address</h3>
+          <h3 style="color:#123C69">Shipping Address</h3>
     <div class="form-group">
     <label for="inputAddressHome">Address</label>
     <input type="text" name="adresse" class="form-control" id="inputAddressHome" placeholder=""[(ngModel)]="form.adresse">
@@ -107,7 +107,7 @@
     <div class="modal-body">
 
         <input type="text" class="form-control" style="display: inline; width:300px;margin-right: 15px;" placeholder="Search by Name">
-        <button type="button" class="btn btn-primary" style="display: inline; background-color: green;">Find </button>
+        <button type="button" class="btn btn-primary" style="display: inline; background-color: #4056A1;">Find </button>
         <button style="display: inline; background-color:darkred;margin-left: 10px;"type="button" class="btn btn-secondary" data-dismiss="modal" >Close</button>
         <table class="table table-striped">
           <thead>
