--- a/src/app/SuperViseur/vets/vets.component.css
+++ b/src/app/SuperViseur/vets/vets.component.css
@@ -6,12 +6,12 @@
 {
   float: right;
   margin-bottom: 10px;
-  background-color: darkred;
+  background-color: #D79922;
   width: 300px;
 }
 a{
   font-size: 13px;
-  color:#01094E;
+  color:#123C69;
 
     text-decoration:underline;
 }
@@ -21,8 +21,8 @@ a{
 #edit
 {
   background-color: aliceblue;
-  color: #01094E;
-  border-color: #01094E;
+  color: #4056A1;
+  border-color:#4056A1;
 }
 
 .switch {
@@ -63,11 +63,11 @@ a{
 }
 
 input:checked + .slider {
-  background-color: darkred;
+  background-color: #4056A1;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #4056A1;
 }
 
 input:checked + .slider:before {
@@ -83,4 +83,11 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+pagination-controls{
+  background-color: #4056A1;
+}
+a:hover{
+  padding-left: 0.5px;
+  left: 0;
 }
