--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,8 @@
 
-<div class="mt-4 col-8 offset-2"  >
+<div class="mt-4 col-8 offset-2" style="width: 550px  ;"id='hi' >
   <div class ="card" style="margin-top:150px">
     <img src="assets/img/login2.png"style="width:100%; height:100px"/>
-    <div class="card-header"><h3 style="color:#01094E"> vet Login </h3></div>
+    <div class="card-header"><h3 style="color:#4056A1; font-family: Georgia, 'Times New Roman', Times, serif;"> Vet Login </h3></div>
     <div class="card-body" >
       <form #loginForm=ngForm (ngSubmit)="onSubmit()" >
         <div class="alert alert-danger" [hidden]="!error">
@@ -25,7 +25,7 @@
 
      <!---->   <div class="form-group row">
           <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary" style="background-color:#080045" [disabled]="!loginForm.valid">Sign in
+            <button type="submit" class="btn btn-primary" style="background-color:#4056A1" [disabled]="!loginForm.valid">Sign in
             </button>
 
 
