--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
-    <nav class="mb-4 navbar navbar-expand-lg navbar-dark indigo " style="background-color:#01094E; background-size: cover;">
-      <img src="assets/img/navbar1.png" style="height: 60px;"/>
+    <nav class="mb-4 navbar navbar-expand-lg navbar-dark indigo" style="background-color:#4056A1; background-size: cover;">
+     <!-- <img src="assets/img/navbar1.png" style="height: 50px;margin-left: 25px;"/>-->
       <a class="navbar-brand font-bold" href="#"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
