--- a/src/app/components/password/request/request.component.html
+++ b/src/app/components/password/request/request.component.html
@@ -4,7 +4,7 @@
 <div class="mt-4 col-8 offset-2"  >
   <div class ="card">
     <img src="assets/img/login2.png"style="width:100%; height:100px"/>
-    <div class="card-header"><h3 style="color:#01094E"> Send Email  for Reset password </h3></div>
+    <div class="card-header"><h3 style="color:#4056A1"> Send Email  for Reset password </h3></div>
     <div class="card-body" >
       <form #RequestRestForm=ngForm (ngSubmit)="onSubmit()" >
         <div class="alert alert-danger" [hidden]="!error">
@@ -22,7 +22,7 @@
 
      <!---->   <div class="form-group row">
           <div class="col-sm-10">
-            <button type="submit" class="btn btn-primary" style="background-color:#080045" [disabled]="!RequestRestForm.valid">Send Password Reset Email
+            <button type="submit" class="btn btn-primary" style="background-color:#4056A1" [disabled]="!RequestRestForm.valid">Send Password Reset Email
             </button>
 
 
